http://redmine.rubyforge.org/


== xx/xx/2006 v0.4.2

* Rails 1.2 is now required
* settings are now stored in the database and editable through the application in: Admin -> Settings (config_custom.rb is no longer used)
* mail notifications added when a document, a file or an attachment is added
* tooltips added on Gantt chart and calender to view the details of the issues
* added missing fields to csv export: priority, start date, due date, done ratio
* all icons replaced (new icons are based on GPL icon set: "KDE Crystal Diamond 2.5" -by paolino- and "kNeu! Alpha v0.1" -by Pablo Fabregat-)
* added back "fixed version" field on issue screen and in filters
* project settings screen split in 4 tabs
* fixed: subprojects count is always 0 on projects list
* fixed: setting an issue status as default status leads to an sql error with SQLite
* fixed: unable to delete an issue status even if it's not used yet
* fixed: filters ignored when exporting a predefined query to csv/pdf


== 01/03/2006 v0.4.1

* fixed: emails have no recipient when one of the project members has notifications disabled


== 01/02/2006 v0.4.0

* simple SVN browser added (just needs svn binaries in PATH)
* comments can now be added on news
* "my page" is now customizable 
* more powerfull and savable filters for issues lists
* improved issues change history
* new functionality: move an issue to another project or tracker
* new functionality: add a note to an issue
* new report: project activity
* "start date" and "% done" fields added on issues
* project calendar added
* gantt chart added (exportable to pdf)
* single/multiple issues pdf export added
* issues reports improvements
* multiple file upload for issues, documents and files
* option to set maximum size of uploaded files
* textile formating of issue and news descritions (RedCloth required)
* integration of DotClear jstoolbar for textile formatting